[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/LeaderboardTool.gd" type="Script" id=1]
[ext_resource path="res://scenes/UI/LeaderboardOverlay.tscn" type="PackedScene" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1366.0
margin_bottom = 29.0
custom_constants/margin_right = 2
custom_constants/margin_top = 5
custom_constants/margin_left = 2
custom_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 2.0
margin_top = 5.0
margin_right = 1364.0
margin_bottom = 29.0

[node name="ShowButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 47.0
margin_bottom = 24.0
text = "Open"

[node name="DumpButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 51.0
margin_right = 102.0
margin_bottom = 24.0
text = "Dump"

[node name="ClearButton" type="MenuButton" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 106.0
margin_right = 162.0
margin_bottom = 24.0
text = "Clear..."
items = [ "WARNING! Not undoable! Confirm?", null, 0, false, false, 0, 0, null, "", false ]

[node name="LeaderboardEdit" type="LineEdit" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 166.0
margin_right = 366.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
text = "test"
placeholder_text = "leaderboard name"

[node name="SubmitButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 370.0
margin_right = 466.0
margin_bottom = 24.0
text = "Submit Score"

[node name="AddScoreButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 470.0
margin_right = 546.0
margin_bottom = 24.0
text = "Add Score"

[node name="PlayerEdit" type="LineEdit" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 550.0
margin_right = 750.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
text = "John"
placeholder_text = "player name"

[node name="TimeSpinBox" type="SpinBox" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 754.0
margin_right = 874.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
hint_tooltip = "Time"
max_value = 3600.0
suffix = "frames"

[node name="RandomButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 878.0
margin_right = 961.0
margin_bottom = 24.0
text = "Randomize"

[node name="ConfigDumpButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 965.0
margin_right = 1059.0
margin_bottom = 24.0
text = "Dump Config"

[node name="ConfigDeleteButton" type="MenuButton" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 1063.0
margin_right = 1173.0
margin_bottom = 24.0
focus_mode = 2
text = "Delete Config..."
items = [ "WARNING! Not undoable! Confirm?", null, 0, false, false, 0, 0, null, "", false ]

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 33.0
margin_right = 1366.0
margin_bottom = 768.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1359.0
margin_bottom = 728.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/ScrollContainer"]
margin_bottom = 14.0

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer"]
margin_bottom = 14.0

[node name="LeaderboardOverlay" parent="." instance=ExtResource( 2 )]
visible = false
